<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ardier16.noteskeeper.ui.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tvAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_note"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/titleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:labelFor="@+id/tvTitle"
            android:maxLength="16"
            android:singleLine="false"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLength="60"
            android:text="@string/description"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/descField"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/priority"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/priorityBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lowPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:onClick="setLowPriority"
                android:text="@string/full_star"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/mediumPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="setMediumPriority"
                android:text="@string/star"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/highPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:onClick="setHighPriority"
                android:text="@string/star"
                android:textSize="48sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_image"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnImage"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:onClick="chooseFromGallery"
            android:padding="10dp"
            android:text="@string/choose_gallery"
            android:textSize="14sp" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorSuccess"
            android:onClick="addNote"
            android:text="@string/save_changes"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>
