<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ardier16.noteskeeper.ui.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/titleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tvTitle"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/note_title"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/descField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/priority"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="italic"/>

        <LinearLayout
            android:id="@+id/priorityBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lowPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:onClick="setLowPriority"
                android:text="@string/full_star"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/mediumPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="setMediumPriority"
                android:text="@string/star"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/highPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:onClick="setHighPriority"
                android:text="@string/star"
                android:textSize="48sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/note_image"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="italic"/>

        <ImageView
            android:id="@+id/noteImg"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@mipmap/note_icon"
            android:layout_gravity="center"/>


    </LinearLayout>

</ScrollView>