<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="84dp">

    <ImageView
        android:id="@+id/noteImg"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:src="@mipmap/note_icon"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noteCreated"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/date_example"
            android:gravity="end|top"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/note_title"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                />

            <TextView
                android:id="@+id/notePriority"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/priotity"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1.5"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>